Add tft game link

--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
                                     src="https://static-cdn.jtvnw.net/ttv-boxart/32982_IGDB-188x250.jpg" alt="Imagem de GTA">
                             </a>
                         </li>
+
+                        <li>
+                            <a 
+                            target="_blank"
+                            href="https://www.twitch.tv/directory/game/Teamfight%20Tactics">
+                                 <img 
+                                    src="https://static-cdn.jtvnw.net/ttv-boxart/513143-285x380.jpg" alt="Imagem de LFT">
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </section>
